# reach

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  PLAN.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
include/reach/: animation.h  applist.h  config.h  config_path.h  dock.h  hotkeys.h  layout.h  monitor.h  pin_config.h  renderer.h  search.h  shell.h  theme.h  util.h  wm.h
include/reach/app/: applist.h  composition_root.h  config.h  config_path.h  pin_config.h
include/reach/composition/: composition_root.h  host.h  surface_runtime.h
include/reach/core/: app_controller.h  app_update.h  clipboard.h  geometry.h  hotkey.h  media_controls.h  menu_commands.h  pinned_app.h  render_commands.h  runtime_policy.h  scrollbar.h  theme.h  ui_events.h  ui_layout.h  ui_state.h  window_id.h  windows_update.h
include/reach/features/: clipboard.h  context_menu.h  dock.h  feature_capsule.h  launcher.h  music_widget.h  pin_config.h  popup.h  quick_settings.h  scrollbar.h  settings.h  switcher.h  tray.h  wallpaper.h  windows_update.h
include/reach/platform/: hotkeys.h  monitor.h  shell_registration.h  windows_adapters.h  windows_messages.h
include/reach/ports/: app_launcher.h  app_update.h  audio_volume.h  clipboard.h  config_store.h  dock_reveal_edge.h  explorer_service.h  foreground_watcher.h  hotkeys.h  icon_provider.h  input_source.h  media_controls.h  monitor.h  platform_window.h  popup_capture.h  power_session.h  render_backend.h  search_provider.h  settings_launcher.h  system_controls.h  textbox.h  tray_provider.h  user_account.h  wallpaper_service.h  wallpaper_surface.h  window_manager.h  windows_update.h
include/reach/protocol/: reach_service_protocol.h  version.h.in
include/reach/services/: app_control.h  config.h  icon_service.h  idle_watch.h  now_playing.h  pin_config.h  search.h  system_status.h  window_tracking.h
include/reach/shell/: shell.h  surface_runtime.h
include/reach/support/: animation.h  layout.h  search_types.h  util.h
licenses/: THIRD_PARTY_NOTICES.md
resources/: app.manifest  elevation_helper.manifest  reach.rc  settings.manifest  settings.rc  updater.manifest
src/: animation.cpp  applist.cpp  config.cpp  config_path.cpp  dock.cpp  hotkeys.cpp  layout.cpp  main.cpp  monitor.cpp  pin_config.cpp  renderer.cpp  search.cpp  shell.cpp  theme.c  util.cpp  wm.cpp
src/adapters/windows/: app_launcher_win32.cpp  audio_volume_win32.cpp  clipboard_win32.cpp  config_ini.cpp  config_path_win32.cpp  dock_reveal_edge_win32.cpp  explorer_desktop_compat_host_win32.cpp  explorer_service_win32.cpp  foreground_watcher_win32.cpp  hotkeys_win32.cpp  icon_shell.cpp  input_win32.cpp  media_controls_win32.cpp  monitor_win32.cpp  popup_capture_win32.cpp  power_session_win32.cpp  reach_update_winhttp.cpp  render_d2d.cpp  search_everything_win32.cpp  search_retriever_win32.cpp  search_stub.cpp  settings_launcher_win32.cpp  shell_registration_win32.cpp  startup_apps_win32.cpp  system_controls_network.cpp  system_controls_network.h  system_controls_win32.cpp  textbox_win32.cpp  tray_win32.cpp  user_account_win32.cpp  wallpaper_surface_win32.cpp  wallpaper_win32.cpp  window_manager_win32.cpp  window_win32.cpp  windows_adapters_internal.h  windows_icon_handle.cpp  windows_icon_handle_internal.h  windows_update_wua.cpp
src/app/: composition_root.cpp  config_path.cpp  main.cpp  pin_config.cpp  settings_app.cpp  settings_main.cpp
src/composition/: composition_root.cpp  host_app_control.cpp  host_clipboard.cpp  host_config.cpp  host_context_menu_orchestration.cpp  host_dock_layout.cpp  host_dock_orchestration.cpp  host_event_dispatch.cpp  host_feedback.cpp  host_game_mode.cpp  host_icons.cpp  host_input.cpp  host_internal.h  host_launcher_orchestration.cpp  host_launcher_search.cpp  host_lifecycle.cpp  host_popup.cpp  host_popup_surface.cpp  host_quick_settings.cpp  host_render.cpp  host_surface_frames.cpp  host_surfaces.cpp  host_switcher_input.cpp  host_system_actions.cpp  host_tray_orchestration.cpp  host_update.cpp  host_window_list_orchestration.cpp  host_window_tracking.cpp  surface_runtime.cpp
src/core/: app_controller.c  app_update.c  clipboard.c  render_commands.c  runtime_policy.c  scrollbar.cpp  theme.c  ui_events.c  ui_layout.c  ui_state.c
src/features/: pin_config.cpp
src/features/clipboard/: clipboard_common.h  clipboard_feature.cpp  clipboard_metrics.h  (+3 more)
src/protocol/: reach_service_protocol.cpp
src/services/: app_control.cpp  config.cpp  icon_service.cpp  idle_watch.cpp  now_playing.cpp  pin_config.cpp  search.cpp  system_status.cpp  window_tracking.cpp
src/shell/: shell.cpp  shell_app_launch.cpp  shell_clipboard.cpp  shell_config.cpp  shell_context_menu_orchestration.cpp  shell_dock_drag.cpp  shell_dock_layout.cpp  shell_dock_orchestration.cpp  shell_event_dispatch.cpp  shell_feedback.cpp  shell_game_mode.cpp  shell_icons.cpp  shell_input.cpp  shell_internal.h  shell_launcher_orchestration.cpp  shell_launcher_search.cpp  shell_lifecycle.cpp  shell_popup.cpp  shell_popup_surface.cpp  shell_quick_settings.cpp  shell_quick_settings_input.cpp  shell_quick_settings_refresh.cpp  shell_render.cpp  shell_settings.cpp  shell_surfaces.cpp  shell_switcher_input.cpp  shell_tray_orchestration.cpp  shell_update.cpp  shell_window_tracking.cpp  shell_windows_updates.cpp  surface_runtime.cpp
src/support/: animation.cpp  layout.cpp  search_ranking.cpp  util.cpp
src/tools/: reach_desktop_probe.cpp  reach_main.cpp  reach_update_helper.cpp  reach_watchdog.cpp  reachctl.cpp  tray_probe.cpp
tests/: clipboard_model_tests.cpp  context_menu_feature_tests.cpp  core_ui_tests.c  dock_feature_tests.cpp  dock_model_tests.cpp  elevation_helper_protocol_tests.cpp  idle_watch_tests.cpp  launcher_feature_tests.cpp  now_playing_service_tests.cpp  pin_config_tests.cpp  quick_settings_feature_tests.cpp  search_ranking_tests.cpp  settings_feature_tests.cpp  system_controls_network_tests.cpp  text_edit_tests.cpp  wallpaper_feature_tests.cpp  window_tracking_tests.cpp  windows_update_feature_tests.cpp
tools/: check_architecture.py
(+124 files in other folders)
